# EnSens

./: .gitmodules  CMakeLists.txt  Kconfig  README.md  app.overlay  prj.conf
boards/Grovety/ensens_nrf52833/: Kconfig.defconfig  Kconfig.ensens_nrf52833  board.cmake  board.yml  ensens_nrf52833.dts  ensens_nrf52833.yml  ensens_nrf52833_defconfig
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/bme68x_iaq/: CMakeLists.txt  Kconfig  bme68x_iaq.c  bme68x_iaq.h
src/: battery.c  battery.h  ble.c  ble.h  led.c  led.h  main.cxx  sensor.cxx  sensor.hxx
sysbuild/: mcuboot.conf  mcuboot.overlay
